--- a/galeria.html
+++ b/galeria.html
@@ -22,12 +22,13 @@
 	<script src="js/jquery.collagePlus.min.js"></script>
 	<script src="js/jquery.removeWhitespace.min.js"></script>
 	<script src="js/jquery.collageCaption.min.js"></script>
-
+<!--
     <style type="text/css">
          header.carousel {
-            height: 60%;
+            
+            height: 0%;
         }
-    </style>
+    </style>-->
 
 </head>
 
@@ -133,6 +134,42 @@ Rodeada de espesa vegetación verde, no de una larga fila de montañas de cement
                         </button>
                     </a>
                     <p>La Gran Falacia es un documental acerca de la situación política, social y económica de Puerto Rico.</p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="fill" style="background-image:url('img/alcapurria.jpg');">
+                </div>
+                <div class="carousel-caption">
+                    <a href="http://es.wikipedia.org/wiki/Alcapurria">
+                        <button class="btn btn-primary btn-lg">
+                            <h1>Alcapurrias</h1>
+                        </button>
+                    </a>
+                    <p>La alcapurria es una fritura originaria de Puerto Rico. Es uno de los muchos platos servidos en los cuchifritos.</p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="fill" style="background-image:url('img/promocion.jpg');">
+                </div>
+                <div class="carousel-caption">
+                    <a href="http://www.zeepuertorico.com/lugar/parque-de-las-cavernas-del-r%C3%ADo-camuy.aspx">
+                        <button class="btn btn-primary btn-lg">
+                            <h1>Las Cavernas de Camuy</h1>
+                        </button>
+                    </a>
+                    <p>El Parque de las Cavernas del Río Camuy es uno de los lugares más espectaculares de Puerto Rico. Es el tercer sistema de cuevas más grande del mundo en donde al momento se han descubierto 18 entradas. Al llegar comenzarás tu travesía con un vídeo y luego un trolley te llevará a la entrada de la cueva principal, Cueva Clara, la cual tiene más de 170 pies de alto y estalagmitas y estalactitas inmensas.</p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="fill" style="background-image:url('img/bienvenido.jpg');">
+                </div>
+                <div class="carousel-caption">
+                    <a href="http://www.zeepuertorico.com/lugar/castillo-san-felipe-del-morro.aspx">
+                        <button class="btn btn-primary btn-lg">
+                            <h1>Castillo San Felipe del Morro </h1>
+                        </button>
+                    </a>
+                    <p>El Castillo San Felipe del Morro fue construido por los españoles en el siglo XVI. El propósito original del castillo era proteger la bahía de San Juan de los enemigos que llegaban por el mar.</p>
                 </div>
             </div>
         <!-- Controls -->
