--- a/historia.html
+++ b/historia.html
@@ -108,6 +108,11 @@
                     <hr class="star-primary">
                 </div>
             </div>
+            <div class="row">
+                <div class="col-sm-offset-2 col-sm-8">
+                    <iframe src="//www.slideshare.net/slideshow/embed_code/key/Mqzx571JEupnXu"  width='700' height='400' frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"></div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -117,6 +122,11 @@
                 <div class="col-sm-12 col-xs-12 text-center">
                     <h2>Nacionalismo y Populismo</h2>
                     <hr class="star-light">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-offset-2 col-sm-8">
+                    <iframe src="//www.slideshare.net/slideshow/embed_code/key/s0l1yf8cUYeDAE" width='700' height='400' frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"></div>
                 </div>
             </div>
         </div>
@@ -150,12 +160,21 @@
                     <img class="img-responsive" src="http://3.bp.blogspot.com/-DcIjdA_N5C4/Ua4ZzHaeHLI/AAAAAAAALAA/fltMYiciMjk/s410/conspiracion.jpg>"></img>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-sm-offset-2 col-sm-4 col-xs-12">
+                    <img  class="img-responsive" src="http://4.bp.blogspot.com/-btPS0cRqoVc/TclqhQXTpAI/AAAAAAAAAf0/8VQmyeeV5xQ/s1600/Homer%2Bel%2Bbien%2Bo%2Bel%2Bmal.jpg">
+                </div>
+                <div class="col-sm-4 col-xs-12">
+                    <img class="img-responsive" src="http://m1.paperblog.com/i/226/2261876/falacia-del-progreso-L-VfFwGb.jpeg">
+                </div>
+            </div>
             <hr>
             <div class="row">
                 <div class="col-sm-offset-2 col-sm-8 col-xs-12">
                     <iframe width='700' height='400' autostart="false" autoplay="" src='http://puertorico.univision.com/videos/video/2014-04-24/investigan-mal-uso-de-fondos/embed' scrolling='no' frameborder='0' allowfullscreen></iframe>
                 </div>
             </div>
+            
         </div>
     </section>
 
