started adding pictures to galeria

--- a/galeria.html
+++ b/galeria.html
@@ -166,10 +166,46 @@ Rodeada de espesa vegetación verde, no de una larga fila de montañas de cement
                 <div class="carousel-caption">
                     <a href="http://www.zeepuertorico.com/lugar/castillo-san-felipe-del-morro.aspx">
                         <button class="btn btn-primary btn-lg">
-                            <h1>Castillo San Felipe del Morro </h1>
+                            <h1>Castillo San Felipe del Morro</h1>
                         </button>
                     </a>
                     <p>El Castillo San Felipe del Morro fue construido por los españoles en el siglo XVI. El propósito original del castillo era proteger la bahía de San Juan de los enemigos que llegaban por el mar.</p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="fill" style="background-image:url('img/capitolio.jpg');">
+                </div>
+                <div class="carousel-caption">
+                    <a href="">
+                        <button class="btn btn-primary btn-lg">
+                            <h1>Capitolio de Puerto Rico</h1>
+                        </button>
+                    </a>
+                    <p>poner algo aqui</p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="fill" style="background-image:url('img/como-somos.jpg');">
+                </div>
+                <div class="carousel-caption">
+                    <a href="">
+                        <button class="btn btn-primary btn-lg">
+                            <h1>Fiestas de la Calle San Sebasián</h1>
+                        </button>
+                    </a>
+                    <p>Poner algo aqui</p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="fill" style="background-image:url('img/');">
+                </div>
+                <div class="carousel-caption">
+                    <a href="">
+                        <button class="btn btn-primary btn-lg">
+                            <h1></h1>
+                        </button>
+                    </a>
+                    <p></p>
                 </div>
             </div>
         <!-- Controls -->
