--- a/referencias.html
+++ b/referencias.html
@@ -112,8 +112,16 @@
                 <div class="row">
                     <div class="col-lg-8 col-xs-12 col-lg-offset-2">
                         <a href="http://www.elnuevodia.com/negocios/finanzas/nota/centroparanuevaeconomiarecomiendaposponerreformacontributiva-2015623/" target="_blank"><p>http://www.elnuevodia.com/negocios/finanzas/nota/centroparanuevaeconomiarecomiendaposponerreformacontributiva-2015623/
-                        </p></a>
                         <a href="http://www.primerahora.com/noticias/puerto-rico/nota/alzadelpetroleoesfatalparaeconomia-478674/" target="_blank"><p>http://www.primerahora.com/noticias/puerto-rico/nota/alzadelpetroleoesfatalparaeconomia-478674/</p></a>
+                        <a href="http://www.primerahora.com/noticias/puerto-rico/nota/alzadelpetroleoesfatalparaeconomia-478674/" target="_blank"><p>http://www.primerahora.com/noticias/puerto-rico/nota/alzadelpetroleoesfatalparaeconomia-478674/</p></a>
+                        <a href="http://www.elnuevodia.com/videos/noticias/locales/videorreportajeelpuebloproponeunanuevaeconomia-163139/" target="_blank"><p>http://www.elnuevodia.com/videos/noticias/locales/videorreportajeelpuebloproponeunanuevaeconomia-163139/</p></a>
+                        <a href="http://www.elnuevodia.com/negocios/consumo/nota/multimillonariaoportunidadparalaeconomiaboricua-2029279/" target="_blank"><p>http://www.elnuevodia.com/negocios/consumo/nota/multimillonariaoportunidadparalaeconomiaboricua-2029279/"</p></a>
+                        <a href="http://www.elnuevodia.com/negocios/finanzas/nota/seachicalaeconomiaotravez-2040653/" target="_blank"><p>http://www.elnuevodia.com/negocios/finanzas/nota/seachicalaeconomiaotravez-2040653/</p></a>
+                        <a href="http://www.elnuevodia.com/negocios/finanzas/nota/centroparanuevaeconomiarecomiendaposponerreformacontributiva-2015623/" target="_blank"><p>http://www.elnuevodia.com/negocios/finanzas/nota/centroparanuevaeconomiarecomiendaposponerreformacontributiva-2015623/"</p></a>
+                        <a href="http://www.primerahora.com/noticias/gobierno-politica/nota/lanzancampanaparaqueconductoresnohuyandelosaccidentes-1078526/" target="_blank"><p> http://www.primerahora.com/noticias/gobierno-politica/nota/lanzancampanaparaqueconductoresnohuyandelosaccidentes-1078526/</p></a>
+                        <a href="http://www.elnuevodia.com/noticias/politica/nota/lajugarretadelosempleos-2037016/" target="_blank"><p>http://www.elnuevodia.com/noticias/politica/nota/lajugarretadelosempleos-2037016/</p></a>
+                        <a href="http://www.elnuevodia.com/noticias/politica/nota/unsistemaquenodamas-2037012/" target="_blank"><p>http://www.elnuevodia.com/noticias/politica/nota/unsistemaquenodamas-2037012/</p></a>
+                        
                     </div>
                 </div>
             </div>
