--- a/como-somos.html
+++ b/como-somos.html
@@ -62,7 +62,7 @@
                             <a href="quienes-somos.html">¿Quienes Somos?</a>
                         </li>
                         <li>
-                            <a href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
+                            <a href="ambiente.html">Ambiente</a>
                         </li>
                         <li>
                             <a href="promocion.html">Promoción Turística</a>
@@ -112,6 +112,20 @@
             <div class="row">
                 <div class="col-sm-offset-2 col-sm-8">
                     <iframe src="https://docs.google.com/document/d/1WyEApNTjbYXk3ADoWiczIltejxNo3CfoxMDpuKJ7f6I/pub?embedded=true" class="col-lg-offset-2 col-lg-8 col-xs-12 col-sm-12" height="500" width="700"></iframe>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-xs-12 text-center">
+                    <h2>Imágenes y vídeos para reforzar el ensayo</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-offset-2 col-sm-4 col-xs-12">
+                    <img class="img-responsive" src="img/como-somos.jpg"></img>
+                </div>
+                <div class="col-sm-4 col-xs-12">
+                    <img class="img-responsive" src=">"></img>
                 </div>
             </div>
         </div>
