--- a/como-somos.html
+++ b/como-somos.html
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12 col-xs-12 text-center">
+                <div class="col-sm-12 col-xs-12 text-center" style="margin-top:10px;">
                     <h2>Imágenes y vídeos para reforzar el ensayo</h2>
                     <hr class="star-primary">
                 </div>
@@ -125,7 +125,7 @@
                     <img class="img-responsive" src="img/como-somos.jpg"></img>
                 </div>
                 <div class="col-sm-4 col-xs-12">
-                    <img class="img-responsive" src=">"></img>
+                    <img class="img-responsive" src="img/bandera.jpg"></img>
                 </div>
             </div>
         </div>
