--- a/ambiente.html
+++ b/ambiente.html
@@ -112,6 +112,25 @@
                 <div class="col-sm-offset-2 col-sm-8">
                     <iframe src="https://docs.google.com/document/d/1_MlIRryisbhbccwwc57KVkBkeuK5Ke4TmB2y0yOOpU0/pub?embedded=true" class="col-lg-offset-2 col-lg-8 col-xs-12 col-sm-12" height="500" width='700'></iframe>
                 </div>
+            </div><div class="row">
+                <div class="col-sm-12 col-xs-12 text-center" style="margin-top:10px;">
+                    <h2>Imágenes y vídeos para reforzar el ensayo</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-offset-2 col-sm-4 col-xs-12">
+                    <img class="img-responsive" src="img/plane.jpg-large"></img>
+                </div>
+                <div class="col-sm-4 col-xs-12">
+                    <img class="img-responsive" src="img/ambiente.jpg"></img>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-sm-offset-2 col-sm-8 col-xs-12">
+                  <iframe width="700" height="400" src="https://www.youtube.com/embed/8UcGHKVl4hg" frameborder="0" allowfullscreen></iframe>
+                </div>
             </div>
         </div>
     </section>
