--- a/como-somos.html
+++ b/como-somos.html
@@ -128,6 +128,12 @@
                     <img class="img-responsive" src="img/bandera.jpg"></img>
                 </div>
             </div>
+            <hr>
+            <div class="row">
+                <div class="col-sm-offset-2 col-sm-8 col-xs-12">
+                   <iframe width="700" height="400" src="https://www.youtube.com/embed/8UcGHKVl4hg" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
     </section>
 
