--- a/ambiente.html
+++ b/ambiente.html
@@ -110,7 +110,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-offset-2 col-sm-8">
-                    <iframe src="https://docs.google.com/document/d/1_MlIRryisbhbccwwc57KVkBkeuK5Ke4TmB2y0yOOpU0/pub?embedded=true" class="col-lg-offset-2 col-lg-8 col-xs-12 col-sm-12" height="500" width='700'></iframe>
+                    <iframe src="https://docs.google.com/document/d/1_MlIRryisbhbccwwc57KVkBkeuK5Ke4TmB2y0yOOpU0/pub?embedded=true" class="col-xs-12" height="500" width='700'></iframe>
                 </div>
             </div><div class="row">
                 <div class="col-sm-12 col-xs-12 text-center" style="margin-top:10px;">
@@ -120,16 +120,20 @@
             </div>
             <div class="row">
                 <div class="col-sm-offset-2 col-sm-4 col-xs-12">
-                    <img class="img-responsive" src="img/plane.jpg-large"></img>
+                    <img class="img-responsive" src="img/agua-mala.jpg"></img>
                 </div>
                 <div class="col-sm-4 col-xs-12">
-                    <img class="img-responsive" src="img/ambiente.jpg"></img>
+                    <img class="img-responsive" src="img/contaminacion-luz.jpeg"></img>
+                </div>
+                <div class="col-xs-12 col-sm-offset-2 col-sm-8">
+                    <img class="img-responsive" src="img/petroleo-pic.jpg"></img>
                 </div>
             </div>
+            
             <hr>
             <div class="row">
                 <div class="col-sm-offset-2 col-sm-8 col-xs-12">
-                  <iframe width="700" height="400" src="https://www.youtube.com/embed/8UcGHKVl4hg" frameborder="0" allowfullscreen></iframe>
+                  <iframe width="700" height="400" src="https://www.youtube.com/embed/2xa0IDl9mtE?feature=player_detailpage" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
