--- a/como-somos.html
+++ b/como-somos.html
@@ -111,7 +111,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-offset-2 col-sm-8">
-                    <iframe src="https://docs.google.com/document/d/1WyEApNTjbYXk3ADoWiczIltejxNo3CfoxMDpuKJ7f6I/pub?embedded=true" class="col-lg-offset-2 col-lg-8 col-xs-12 col-sm-12" height="500" width="700"></iframe>
+                    <iframe src="https://docs.google.com/document/d/1WyEApNTjbYXk3ADoWiczIltejxNo3CfoxMDpuKJ7f6I/pub?embedded=true" class="col-xs-12" height="500" width="700"></iframe>
                 </div>
             </div>
             <div class="row">
