--- a/historia.html
+++ b/historia.html
@@ -142,7 +142,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-offset-2 col-sm-8">
-                    <iframe height="500" width='700' src="https://docs.google.com/document/d/16TdTuK4S62jMxv87k6WYMaOW9FTTidpxavApmyxdWnk/pub?embedded=true"></iframe>
+                    <iframe height="500" width='700' src="https://docs.google.com/document/d/16TdTuK4S62jMxv87k6WYMaOW9FTTidpxavApmyxdWnk/pub?embedded=true" class="col-xs-12"></iframe>
                 </div>
             </div>
             <hr>
