added picture to support essay

--- a/como-somos.html
+++ b/como-somos.html
@@ -127,6 +127,9 @@
                 <div class="col-sm-4 col-xs-12">
                     <img class="img-responsive" src="img/bandera.jpg"></img>
                 </div>
+                <div class="col-sm-4 col-xs-12 col-sm-offset-2">
+                    <img class="img-responsive" src="img/alcapurria.jpg"></img>
+                </div>
             </div>
             <hr>
             <div class="row">
