--- a/galeria.html
+++ b/galeria.html
@@ -140,7 +140,7 @@ Rodeada de espesa vegetación verde, no de una larga fila de montañas de cement
                 <div class="fill" style="background-image:url('img/alcapurria.jpg');">
                 </div>
                 <div class="carousel-caption">
-                    <a href="http://es.wikipedia.org/wiki/Alcapurria">
+                    <a href="http://etimologias.dechile.net/?alcapurria">
                         <button class="btn btn-primary btn-lg">
                             <h1>Alcapurrias</h1>
                         </button>
@@ -176,12 +176,12 @@ Rodeada de espesa vegetación verde, no de una larga fila de montañas de cement
                 <div class="fill" style="background-image:url('img/capitolio.jpg');">
                 </div>
                 <div class="carousel-caption">
-                    <a href="">
+                    <a href="http://senado.pr.gov/visitantes/pages/historiadelcapitolio.aspx">
                         <button class="btn btn-primary btn-lg">
                             <h1>Capitolio de Puerto Rico</h1>
                         </button>
                     </a>
-                    <p>poner algo aqui</p>
+                    <p>El Capitolio de Puerto Rico se inauguró el 11 de febrero de 1929 como sede del Poder Legislativo puertorriqueño. Antes de su inauguración, los legisladores se reunían en el edificio de la antigua Diputación Provisional, donde ahora está la sede del Departamento de Estado de Puerto Rico.La idea de construir el Capitolio provino del entonces miembro de la Cámara de Delegados (hoy, de Representantes), Don Luis Muñoz Rivera, quien en el año 1907, radicó un proyecto asignando $300,000 para el diseño e inicio de los trabajos de construcción del edificio.</p>
                 </div>
             </div>
             <div class="item">
@@ -193,19 +193,19 @@ Rodeada de espesa vegetación verde, no de una larga fila de montañas de cement
                             <h1>Fiestas de la Calle San Sebasián</h1>
                         </button>
                     </a>
-                    <p>Poner algo aqui</p>
+                    <p>Las Fiestas de la Calle San Sebastián se celebran en honor a este santo el tercer fin de semana del mes de enero en el Viejo San Juan. Esta festividad, que goza de gran popularidad, se ha llevado cabo por los pasados 40 años.</p>
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('img/');">
+                <div class="fill" style="background-image:url('http://www.verdanzahotel.com/d/verdanzahotel/media/Get_Around/el_yunque_puerto_rico.jpg');">
                 </div>
                 <div class="carousel-caption">
-                    <a href="">
+                    <a href="http://www.elyunque.com/elyunque_espanol.htm">
                         <button class="btn btn-primary btn-lg">
-                            <h1></h1>
+                            <h1>El Yunque National Forest</h1>
                         </button>
                     </a>
-                    <p></p>
+                    <p>El Bosque Pluvial 'El Yunque' es un lugar fresco, de montaña, selva sub tropical. El lado oriental de las montañas de Luquillo, que tiene el bosque tropical El Yunque en la parte superior elevaciones, obtiene la mayor parte de la lluvia.</p>
                 </div>
             </div>
         <!-- Controls -->
