--- a/noticias.html
+++ b/noticias.html
@@ -93,7 +93,7 @@
                 <div class="col-xs-12">
                     <div class="intro-text">
                         <span class="name">Noticias</span>
-                        <span class="skills">En esta seccion se encontrarán varias noticias de diferentes carácteres.</span>
+                        <span class="skills">En esta sección se encontrarán varias noticias de diferentes carácteres.</span>
                     </div>
                 </div>
             </div>
