--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -104,7 +104,7 @@
             <div class="row">
                 <div class="col-lg-12 col-xs-12">
                     <div class="intro-text">
-                        <span class="name">¿Quienes somos?</span>
+                        <span class="name">¿Quiénes somos?</span>
                     </div>
                 </div>
             </div>
@@ -139,7 +139,7 @@
             </div>
             <div lass="row">
                 <div class="col-lg-8 col-xs-12 col-lg-offset-2">
-                    <p>Se espera que al realizar esta página web se pueda informar y ayudar a cualquier persona que esté interesada en aprender la historia de nuestra isla, Puerto Rico. sobre la historia de nuestra isla, Puerto Rico. Además, informarles de los acontecimientos actuals por los que pasa Puerto Rico. Aquellos que tengan acceso a la página web, podrán disfrutar de la versatilidad de los puertorriqueños.</p>
+                    <p>Se espera que al realizar esta página web se pueda informar y ayudar a cualquier persona que esté interesada en aprender la historia de nuestra isla, Puerto Rico. sobre la historia de nuestra isla, Puerto Rico. Además, informarles de los acontecimientos actuales por los que pasa Puerto Rico. Aquellos que tengan acceso a la página web, podrán disfrutar de la versatilidad de los puertorriqueños.</p>
                 </div>
             </div>
         </div>
@@ -156,7 +156,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-xs-12 col-lg-offset-2">
-                    <p>Nuestro deber como puertorriqueños es trabajar arduamente por un mejor progreso para nuestra isla, la que llamamos Puerto Rico. El fin de esta página web es  poder orientar, ayudar e informar al público vigente sobre los diferentes temas informativos que se estarán abarcando un mejor progreso para Puerto Rico. ¡Disfruten de la cultura puertorriquena!</p>
+                    <p>Nuestro deber como puertorriqueños es trabajar arduamente por un mejor progreso para nuestra isla, para Puerto Rico. El fin de esta página web es  poder orientar, ayudar e informar al público vigente sobre los diferentes temas informativos que se estarán abarcando un mejor progreso para Puerto Rico. ¡Disfruten de la cultura puertorriqueña!</p>
 
                 </div>
             </div>
@@ -203,7 +203,9 @@
                         <img src="img/Natalia.jpg" class="img-responsive img-fix">
                     </a>
                 </div>
-                <div class="col-sm-4 col-xs-12 portfolio-item">
+            </div>
+            <div class="row" style="margin: 0 auto;">
+                <div class="col-sm-offset-2 col-sm-4 col-xs-12 portfolio-item">
                     <a class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
@@ -223,6 +225,7 @@
                         <img src="img/Ricardo.jpg" class="img-responsive ricardo-fix">
                     </a>
                 </div>
+            </div>
 <!--                 <div class="col-sm-4 portfolio-item">
                     <a class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -233,7 +236,6 @@
                         <img src="" class="img-responsive">
                     </a>
                 </div> -->
-            </div>
         </div>
     </section>
     
