--- a/referencias.html
+++ b/referencias.html
@@ -93,7 +93,7 @@
                 <div class="col-xs-12">
                     <div class="intro-text">
                         <span class="name">Referencias</span>
-                        <span class="skills">En esta sección se encuentran todas las referencias que se usaron en todas las secciones incluyendo las que se usaron en los ensayos y las presentaciones</span>
+                        <span class="skills">En esta sección se encontrarán todas las referencias utilizadas en ésta página web. A su vez, las que se utilizaron para los ensayos, presentaciones, entre otros trabajos.</span>
                     </div>
                 </div>
             </div>
