--- a/noticias.html
+++ b/noticias.html
@@ -109,8 +109,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-10 col-sm-offset-1 col-xs-12 portfolio-item">
-                    <div class="col-sm-4">
+                <div class="col-sm-12 col-sm-offset-1 col-xs-12 portfolio-item">
+                    <div class="col-sm-4 portfolio-item">
                         <a href="#modaleconomico1" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
@@ -120,7 +120,7 @@
                             <img class="img-responsive news-pic" src="http://recend.apextech.netdna-cdn.com/images/tn/300/260/2013/11/29/gas.jpg_thumbnail0_1.jpg">
                         </a>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-4 portfolio-item">
                         <a href="#modaleconomico2" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
@@ -130,7 +130,7 @@
                             <img class="img-responsive news-pic" src="http://imgcache.noticiasonline.com/fotos/economydown.jpg">
                         </a>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-4 portfolio-item">
                         <a href="#modaleconomico3" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
@@ -140,7 +140,7 @@
                             <img class="img-responsive news-pic" src="http://recend.apextech.netdna-cdn.com/images/tn/0/0/3617/1801/900/447/2015/04/03/20140423_end_negocios_worldecono.jpg">
                         </a>
                     </div>
-                    <div class="col-sm-offset-2 col-sm-4" style="padding-top: 30px">
+                    <div class="col-sm-offset-2 col-sm-4 " style="padding-top: 30px">
                         <a href="#modaleconomico4" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
@@ -174,7 +174,7 @@
                 </div>
         	</div>
             <div class="row">
-                <div class="col-sm-10 col-sm-offset-1 col-xs-12 portfolio-item">
+                <div class="col-sm-12 col-sm-offset-1 col-xs-12 portfolio-item">
                     <div class="col-sm-4">
                         <a href="#modalpolitico1" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
@@ -240,7 +240,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-10 col-sm-offset-1 col-xs-12 portfolio-item">
+                <div class="col-sm-12 col-sm-offset-1 col-xs-12 portfolio-item">
                     <div class="col-sm-4">
                         <a href="#modalsocial1" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
@@ -305,7 +305,7 @@
                 </div>
         	</div>
              <div class="row">
-                <div class="col-sm-10 col-xs-12 col-sm-offset-1 portfolio-item">
+                <div class="col-sm-12 col-xs-12 col-sm-offset-1 portfolio-item">
                     <div class="col-sm-4">
                         <a href="#modalambiental1" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
