--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -203,7 +203,7 @@
                         <img src="img/Natalia.jpg" class="img-responsive img-fix">
                     </a>
                 </div>
-                <div class="col-sm-offset-2 col-sm-4 col-xs-12 portfolio-item">
+                <div class="col-sm-offset-2 col-sm-4 col-xs-12 ">
                     <a class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
@@ -213,7 +213,7 @@
                         <img src="img/Jose.jpg" class="img-responsive img-fix">
                     </a>
                 </div>
-                <div class="col-sm-4 col-xs-12 portfolio-item">
+                <div class="col-sm-4 col-xs-12">
                     <a class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
