--- a/ambiente.html
+++ b/ambiente.html
@@ -125,7 +125,7 @@
                 <div class="col-sm-3 col-xs-12">
                     <img class="img-responsive" src="img/contaminacion-luz.jpeg"></img>
                 </div>
-                <div class="col-xs-12 col-sm-offset-2 col-sm-3">
+                <div class="col-xs-12 col-sm-3">
                     <img class="img-responsive" src="img/petroleo-pic.jpg"></img>
                 </div>
             </div>
