--- a/como-somos.html
+++ b/como-somos.html
@@ -59,7 +59,7 @@
                             <a class="hidden-md hidden-sm hidden-md hidden-lg hidden-xl" href="index.html">Inicio</a>
                         </li>
                         <li>
-                            <a href="quienes-somos.html">¿Quienes Somos?</a>
+                            <a href="quienes-somos.html">¿Quiénes Somos?</a>
                         </li>
                         <li>
                             <a href="ambiente.html">Ambiente</a>
