--- a/promocion.html
+++ b/promocion.html
@@ -57,7 +57,7 @@
                             <a class="hidden-md hidden-sm hidden-md hidden-lg hidden-xl" href="index.html">Inicio</a>
                         </li>
                         <li>
-                            <a href="quienes-somos.html">¿Quienes Somos?</a>
+                            <a href="quienes-somos.html">¿Quiénes Somos?</a>
                         </li>
                         <li>
                             <a class="class-xs-12" href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
@@ -104,7 +104,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-xs-12 text-center">
-                    <h2>Opúsculo</h2>
+                    <h2>Flyer y Opúsculo</h2>
                     <hr class="star-primary">
                 </div>
             </div>
