--- a/ambiente.html
+++ b/ambiente.html
@@ -58,7 +58,7 @@
                             <a class="hidden-md hidden-sm hidden-md hidden-lg hidden-xl" href="index.html">Inicio</a>
                         </li>
                         <li>
-                            <a href="quienes-somos.html">¿Quienes Somos?</a>
+                            <a href="quienes-somos.html">¿Quiénes Somos?</a>
                         </li>
                         <li>
                             <a href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
@@ -119,13 +119,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-offset-1 col-sm-3 col-xs-12">
+                <div class="col-sm-offset-2 col-sm-4 col-xs-12">
                     <img class="img-responsive" src="img/agua-mala.jpg"></img>
                 </div>
-                <div class="col-sm-3 col-xs-12">
+                <div class="col-sm-4 col-xs-12">
                     <img class="img-responsive" src="img/contaminacion-luz.jpeg"></img>
                 </div>
-                <div class="col-xs-12 col-sm-3">
+                <div class="col-xs-12 col-sm-offset-4  col-sm-4" style="margin-top:15px;">
                     <img class="img-responsive" src="img/petroleo-pic.jpg"></img>
                 </div>
             </div>
