--- a/galeria.html
+++ b/galeria.html
@@ -57,7 +57,7 @@
                             <a class="hidden-md hidden-sm hidden-md hidden-lg hidden-xl" href="index.html">Inicio</a>
                         </li>
                         <li>
-                            <a href="quienes-somos.html">¿Quienes Somos?</a>
+                            <a href="quienes-somos.html">¿Quiénes Somos?</a>
                         </li>                        
                         <li>
                             <a class="class-xs-12" href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
@@ -105,7 +105,7 @@
                     <div class="fill" style="background-image:url('img/grupo.jpg');"></div>
                 </a>
                 <div class="carousel-caption">
-                    <h1>Versatilidad Puertorriquena</h1>
+                    <h1>Versatilidad Puertorriqueña</h1>
                     <p>En esta sección de la página encontrarás todas las imagenes y vídeos utilizados en la página.</p>
                 </div>
             </div>
