--- a/referencias.html
+++ b/referencias.html
@@ -57,7 +57,7 @@
                             <a class="hidden-md hidden-sm hidden-md hidden-lg hidden-xl" href="index.html">Inicio</a>
                         </li>
                         <li>
-                            <a href="quienes-somos.html">¿Quienes Somos?</a>
+                            <a href="quienes-somos.html">¿Quiénes Somos?</a>
                         </li>
                         <li>
                             <a href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
