--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="fill" style="background-image:url('img/bienvenido.jpg');"></div>
                 </a>
                 <div class="carousel-caption">
-                    <h1>Bienvenidos a Versatilidad Puertorriqueña</h1>
+                    <h1>Bienvcenidos a Versatilidad Puertorriqueña</h1>
                 </div>
             </div>
             <div class="item">
@@ -183,7 +183,18 @@
         interval: 7000 //changes the speed
     })
     </script>
+    
+    <!--    Google web analitycs script-->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+      ga('create', 'UA-64078174-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </body>
 
 </html>
